--- a/筆記/资治通鉴39.html
+++ b/筆記/资治通鉴39.html
@@ -421,6 +421,95 @@ pre[data-line] .line-highlight[data-end]:after {
 </tr>
 </tbody>
 </table>
+<ul>
+<li>銅馬諸賊表</li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>勢力名</th>
+<th>賊帥</th>
+<th>興滅</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>銅馬</td>
+<td>東山荒禿、上淮況</td>
+<td>被劉秀破於館陶</td>
+</tr>
+<tr>
+<td>高湖</td>
+<td></td>
+<td>與銅馬餘眾合，復被劉秀破於蒲陽</td>
+</tr>
+<tr>
+<td>重連</td>
+<td></td>
+<td>與銅馬餘眾合，復被劉秀破於蒲陽</td>
+</tr>
+<tr>
+<td>青犢</td>
+<td></td>
+<td>初被鮑永破。與赤眉別帥合，被劉秀破於射犬</td>
+</tr>
+<tr>
+<td>上江</td>
+<td></td>
+<td>與赤眉別帥合，被劉秀破於射犬</td>
+</tr>
+<tr>
+<td>大彤</td>
+<td>樊重</td>
+<td>與赤眉別帥合，被劉秀破於射犬</td>
+</tr>
+<tr>
+<td>鐵脛</td>
+<td></td>
+<td>與赤眉別帥合，被劉秀破於射犬</td>
+</tr>
+<tr>
+<td>五幡</td>
+<td></td>
+<td>與赤眉別帥合，被劉秀破於射犬。被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡</td>
+</tr>
+<tr>
+<td>尤來</td>
+<td>樊崇</td>
+<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡</td>
+</tr>
+<tr>
+<td>大槍</td>
+<td></td>
+<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡</td>
+</tr>
+<tr>
+<td>五校</td>
+<td>高扈</td>
+<td>真定戰傷賈復</td>
+</tr>
+<tr>
+<td>五樓</td>
+<td>張文</td>
+<td></td>
+</tr>
+<tr>
+<td>富平</td>
+<td>徐少</td>
+<td></td>
+</tr>
+<tr>
+<td>獲索</td>
+<td>古師郎</td>
+<td></td>
+</tr>
+<tr>
+<td>檀鄉</td>
+<td>董次仲</td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
       </div>
       
