--- a/年代專項/新朝/新末起義政權圖.html
+++ b/年代專項/新朝/新末起義政權圖.html
@@ -298,6 +298,7 @@ section 玄漢
     王鳳:done,wf3,after wf2,732d
     劉縯:active,ly2,after ly,1d
     劉秀:active,lx2,after lx,732d
+    張卬:active,za2,after za,366d
 section 東漢
     劉秀:done,lx3,after lx2,732d
     
@@ -315,10 +316,11 @@ section __赤眉二部
     徐宣:active,xx2,after xx,366d
     謝祿:active,xl2,after xl,366d
     楊音:active,yy2,after yy,366d
-%%section 劉盆子
-%%    樊崇:active,fc2,after fc,732d
-%%    徐宣:active,xx2,after xx,732d
-%%    王匡:crit,wk4,after wk3,366d
+section 劉盆子
+    樊崇:active,fc2,after fc,732d
+    徐宣:active,xx2,after xx,732d
+    王匡:crit,wk4,after wk3,366d
+    張卬:done,za3,after za2,732d
   
 section 群雄
   瓜田儀:gty,17,1464d
@@ -343,17 +345,18 @@ section 稱帝
     劉秀:lxiu,25,4392d
     劉望:lw,23,60d
     王郎:wl,23,366d
-    劉嬰:lying,25,366d
+    劉嬰:lying,25,1d
     劉盆子:lpz,25,732d
     劉永:lyong,25,732d
+    盧芳:lf,25,4392d
     公孫述:gss,25,4026d
     孫登:sd,26,30d
     李憲:lxian,27,1098d
 
 section 割據
     秦豐:qf,24,1830d
-    隗囂:wx,23,3660d
-    盧芳:lf,25,4392d
+    竇融:dr,25,4026d
+    隗囂:wx,26,2562d
     彭寵:pc,26,1098d
 </div>
       </div>
