完成卷40，更新新末兩漢政權圖表

--- a/筆記/资治通鉴40.html
+++ b/筆記/资治通鉴40.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-      <title>资治通鉴39</title>
+      <title>资治通鉴40</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
@@ -262,254 +262,104 @@ pre[data-line] .line-highlight[data-end]:after {
     <body for="html-export">
       <div class="mume markdown-preview  ">
       <blockquote>
-<p>2021/7/27-&gt;2021/8/1</p>
+<p>2021/8/2-&gt;2021/8/8</p>
 </blockquote>
-<h1 class="mume-header" id="403-%E5%8D%B7%E4%B8%89%E5%8D%81%E4%B9%9D-%E6%B1%89%E7%BA%AA%E4%B8%89%E5%8D%81%E4%B8%80">403 卷三十九 汉纪三十一</h1>
+<h1 class="mume-header" id="501-%E5%8D%B7%E5%9B%9B%E5%8D%81-%E6%B1%89%E7%BA%AA%E4%B8%89%E5%8D%81%E4%BA%8C">501 卷四十 汉纪三十二</h1>
 
 <blockquote>
-<p>23-&gt;24</p>
+<p>25-&gt;26</p>
 </blockquote>
-<h2 class="mume-header" id="40301-%E6%B7%AF%E9%99%BD%E4%B9%8B%E6%88%B0%E5%8F%8A%E7%AB%8B%E6%9B%B4%E5%A7%8B%E5%B8%9D">40301 淯陽之戰及立更始帝</h2>
+<h2 class="mume-header" id="50101-%E7%A0%B4%E9%8A%85%E9%A6%AC%E8%BB%8D%E5%8F%8A%E5%85%89%E6%AD%A6%E7%A8%B1%E5%B8%9D">50101 破銅馬軍及光武稱帝</h2>
 
 <blockquote>
-<p>春，正月，甲子朔-&gt;由是豪桀失望，多不服</p>
+<p>春，正月，方望与安陵人弓林共立前定安公婴为天子-&gt;改元，大赦</p>
 </blockquote>
-<h2 class="mume-header" id="40302-%E6%98%86%E9%99%BD%E4%B9%8B%E6%88%B0">40302 昆陽之戰</h2>
+<h2 class="mume-header" id="50102-%E6%9B%B4%E5%A7%8B%E5%85%A7%E4%BA%82%E5%8F%8A%E7%AB%8B%E5%8A%89%E7%9B%86%E5%AD%90">50102 更始內亂及立劉盆子</h2>
 
 <blockquote>
-<p>王莽欲外示自安-&gt;旬月之间，遍于天下</p>
+<p>邓禹围安邑-&gt;崇等亦不复候视也</p>
 </blockquote>
 <ul>
-<li>染髮第一人王莽</li>
-</ul>
-<h2 class="mume-header" id="40303-%E9%A6%AE%E7%95%B0%E9%99%8D%E5%8F%8A%E5%8A%89%E7%B8%AF%E5%8A%89%E6%AD%86%E6%AD%BB">40303 馮異降及劉縯劉歆死</h2>
-
-<blockquote>
-<p>莽闻汉兵言莽鸩杀孝平皇帝-&gt;不復就枕矣</p>
-</blockquote>
+<li>赤眉體現純農民起義典型亂象
 <ul>
-<li>王莽苦，每天只喝酒吃鮑魚，讀軍書不睡覺</li>
-</ul>
-<h2 class="mume-header" id="40304-%E9%9A%97%E5%9B%82%E5%85%AC%E5%AD%AB%E8%BF%B0%E8%B5%B7%E5%8F%8A%E5%8A%89%E6%9C%9B%E7%A8%B1%E5%B8%9D">40304 隗囂公孫述起及劉望稱帝</h2>
-
-<blockquote>
-<p>成紀隗崔、隗義-&gt;茂為丞相</p>
-</blockquote>
-<h2 class="mume-header" id="40305-%E5%93%AD%E5%A4%A9%E5%8E%AD%E5%85%B5%E5%8F%8A%E7%8E%8B%E8%8E%BD%E6%AD%BB">40305 哭天厭兵及王莽死</h2>
-
-<blockquote>
-<p>王莽使太師王匡-&gt;皆圣王之驱除云尔</p>
-</blockquote>
-<ul>
-<li>王莽死前行為藝術
-<ul>
-<li>打不過就哭天厭兵，哭者有飯吃，哭得悲哀的封郎官</li>
-<li>拜九虎守長安，每人四千錢，二虎自殺四虎亡</li>
-<li>赦囚徒殺豬飲血盟誓，還沒開戰全跑光</li>
-<li>死前衣華服，手持假古董虞帝匕首，坐在星象斗柄上，聲稱誰敢殺我</li>
+<li>起義時間雖早，但一直不知道設旗號</li>
+<li>聽說要立個皇帝，抓鬮選皇帝，自己稱臣</li>
+<li>立了皇帝也是跟風做傀儡，從來不拜也不會用</li>
+<li>經濟來源靠搶，一路打砸搶，污辱呂后屍</li>
 </ul>
 </li>
 </ul>
-<h2 class="mume-header" id="40306-%E6%9B%B4%E5%A7%8B%E9%83%BD%E6%B4%9B%E9%99%BD">40306 更始都洛陽</h2>
+<h2 class="mume-header" id="50103-%E8%B5%A4%E7%9C%89%E7%A0%B4%E6%9B%B4%E5%A7%8B%E5%8F%8A%E6%8B%9C%E5%8D%93%E8%8C%82">50103 赤眉破更始及拜卓茂</h2>
 
 <blockquote>
-<p>定国上公王匡拔洛阳-&gt;都睢陽</p>
+<p>秋，七月，辛未-&gt;盖由知所先务而得其本原故也</p>
+</blockquote>
+<h2 class="mume-header" id="50104-%E5%85%89%E6%AD%A6%E9%83%BD%E6%B4%9B%E9%98%B3%E5%8F%8A%E8%B5%A4%E7%9C%89%E9%80%B2%E9%95%BF%E5%AE%89">50104 光武都洛阳及赤眉進长安</h2>
+
+<blockquote>
+<p>诸将围洛阳数月-&gt;十一月，甲午，上幸懷</p>
 </blockquote>
 <ul>
-<li>更始入洛陽，王匡斬王匡</li>
+<li>劉恭為劉玄鞠躬盡瘁，自刎救之，終死於其子</li>
 </ul>
-<h2 class="mume-header" id="40307-%E5%BE%87%E6%B2%B3%E5%8C%97%E5%8F%8A%E6%94%B6%E9%84%A7%E7%A6%B9%E5%8F%8A%E7%AB%8B%E7%8E%8B%E9%83%8E">40307 徇河北及收鄧禹及立王郎</h2>
+<h2 class="mume-header" id="50105-%E5%8A%89%E6%B0%B8%E9%9A%97%E5%9B%82%E7%AB%87%E8%9E%8D%E7%9B%A7%E8%8A%B3">50105 劉永隗囂竇融盧芳</h2>
 
 <blockquote>
-<p>更始欲令親近大將徇河北-&gt;乃北徇蓟</p>
+<p>梁王永稱帝淮陽-&gt;將胡騎還入安定</p>
 </blockquote>
-<h2 class="mume-header" id="40308-%E6%9B%B4%E5%A7%8B%E5%B0%81%E7%8E%8B%E5%8F%8A%E8%B6%99%E8%90%8C%E5%B0%88%E6%AC%8A">40308 更始封王及趙萌專權</h2>
+<h2 class="mume-header" id="50106-%E9%A6%AE%E6%84%94%E5%8F%9B%E6%BC%A2%E5%8F%8A%E5%8A%89%E7%9B%86%E5%AD%90%E9%80%80%E4%BD%8D%E9%9B%A3">50106 馮愔叛漢及劉盆子退位難</h2>
 
 <blockquote>
-<p>申屠建、李松自长安迎更始迁都-&gt;崔、义皆即旧号</p>
-</blockquote>
-<ul>
-<li>更始帝登基羞愧流汗說不出話，面見群臣俯首刮席，行為過於具體，偽造可能性大</li>
-</ul>
-<h2 class="mume-header" id="40309-%E5%BE%81%E7%8E%8B%E9%83%8E%E6%B5%81%E4%BA%A1%E6%9C%9F">40309 征王郎流亡期</h2>
-
-<blockquote>
-<p>耿况遣其子弇奉奏诣长安-&gt;燒盧舍以絕其反顧之望</p>
+<p>帝以關中未定-&gt;边路流通</p>
 </blockquote>
 <ul>
-<li>陰陵田父故意給項羽指錯道，項羽敗；白衣老父特地給劉秀指明路，劉秀勝</li>
+<li>劉盆子一生甘願牧羊，被強行抓鬮選為皇帝，哭著鬧著要退位而不得，死了都願意也沒用，這就是傳說中的真命天子</li>
 </ul>
-<h2 class="mume-header" id="40310-%E6%94%BB%E6%9F%8F%E4%BA%BA%E9%89%85%E9%B9%BF%E4%B8%8D%E5%88%A9%E5%8F%8A%E6%94%B6%E7%9C%BE%E5%B0%87">40310 攻柏人鉅鹿不利及收眾將</h2>
+<h2 class="mume-header" id="50107-%E5%B0%81%E7%BE%A4%E8%87%A3%E8%AA%85%E5%8A%89%E6%A5%8A%E6%93%A2%E5%AE%8B%E5%BC%98">50107 封群臣誅劉楊擢宋弘</h2>
 
 <blockquote>
-<p>秀進拔盧奴-&gt;樂可言邪</p>
+<p>庚辰，悉封诸功臣为列侯-&gt;事不谐矣</p>
 </blockquote>
-<h2 class="mume-header" id="40311-%E6%96%AC%E7%8E%8B%E9%83%8E%E5%8F%8A%E5%8A%89%E7%A7%80%E7%8D%A8%E7%AB%8B">40311 斬王郎及劉秀獨立</h2>
+<h2 class="mume-header" id="50108-%E5%BD%AD%E5%AF%B5%E5%BB%B6%E5%B2%91%E5%85%AC%E5%AD%AB%E8%BF%B0%E5%8F%8D">50108 彭寵延岑公孫述反</h2>
 
 <blockquote>
-<p>耿純言於秀曰-&gt;始貳於更始</p>
+<p>帝之讨王郎也-&gt;於是盡有益州之地</p>
 </blockquote>
-<ul>
-<li>曹操赤壁後焚謗書，同光武破王郎後焚書</li>
-</ul>
-<h2 class="mume-header" id="40312-%E7%BE%A4%E9%9B%84%E4%B8%A6%E8%B5%B7">40312 群雄並起</h2>
+<h2 class="mume-header" id="50109-%E6%94%B6%E9%83%BE%E5%AE%9B%E7%8E%8B%E5%AE%97%E5%AE%A4%E7%AB%8B%E5%A4%AA%E5%AD%90">50109 收郾宛王宗室立太子</h2>
 
 <blockquote>
-<p>是時，諸賊銅馬-&gt;众数万人</p>
+<p>辛卯，上還洛陽-&gt;封泗水王子终为淄川王</p>
 </blockquote>
 <ul>
-<li>東漢幽州十郡</li>
-</ul>
-<table>
-<thead>
-<tr>
-<th>郡名</th>
-<th>郡治現位置</th>
-<th>沿革別名</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>涿郡</td>
-<td>河北涿州</td>
-<td>三國范陽</td>
-</tr>
-<tr>
-<td>廣陽</td>
-<td>北京大興</td>
-<td>戰國燕薊縣</td>
-</tr>
-<tr>
-<td>代郡</td>
-<td>河北蔚縣</td>
-<td></td>
-</tr>
-<tr>
-<td>上谷</td>
-<td>河北張家口懷來</td>
-<td></td>
-</tr>
-<tr>
-<td>漁陽</td>
-<td>北京密雲</td>
-<td></td>
-</tr>
-<tr>
-<td>右北平</td>
-<td>內蒙古寧城</td>
-<td></td>
-</tr>
-<tr>
-<td>遼西</td>
-<td>遼寧義縣</td>
-<td></td>
-</tr>
-<tr>
-<td>遼東</td>
-<td>遼寧遼陽</td>
-<td></td>
-</tr>
-<tr>
-<td>玄菟</td>
-<td>吉林集安，數遷</td>
-<td></td>
-</tr>
-<tr>
-<td>樂浪</td>
-<td>朝鮮平壤</td>
-<td></td>
-</tr>
-</tbody>
-</table>
+<li>劉秀相關的名字風波
 <ul>
-<li>銅馬諸賊表</li>
+<li>劉歆避漢哀帝劉欣諱，改名劉秀</li>
+<li>讖緯言劉秀起，劉歆因名劉秀謀反被誅</li>
+<li>劉玄子名劉歆</li>
 </ul>
-<table>
-<thead>
-<tr>
-<th>勢力名</th>
-<th>賊帥</th>
-<th>興滅</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>銅馬</td>
-<td>東山荒禿、上淮況</td>
-<td>被劉秀破於館陶。餘黨立孫登為天子</td>
-</tr>
-<tr>
-<td>高湖</td>
-<td></td>
-<td>與銅馬餘眾合，復被劉秀破於蒲陽</td>
-</tr>
-<tr>
-<td>重連</td>
-<td></td>
-<td>與銅馬餘眾合，復被劉秀破於蒲陽</td>
-</tr>
-<tr>
-<td>青犢</td>
-<td></td>
-<td>初被鮑永破。與赤眉別帥合，被劉秀破於射犬。餘黨立孫登為天子</td>
-</tr>
-<tr>
-<td>上江</td>
-<td></td>
-<td>與赤眉別帥合，被劉秀破於射犬</td>
-</tr>
-<tr>
-<td>大彤</td>
-<td>樊重</td>
-<td>與赤眉別帥合，被劉秀破於射犬</td>
-</tr>
-<tr>
-<td>鐵脛</td>
-<td></td>
-<td>與赤眉別帥合，被劉秀破於射犬</td>
-</tr>
-<tr>
-<td>五幡</td>
-<td></td>
-<td>與赤眉別帥合，被劉秀破於射犬。被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡</td>
-</tr>
-<tr>
-<td>尤來</td>
-<td>樊崇</td>
-<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡。餘黨李孫登為天子</td>
-</tr>
-<tr>
-<td>大槍</td>
-<td></td>
-<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡</td>
-</tr>
-<tr>
-<td>五校</td>
-<td>高扈</td>
-<td>真定戰傷賈復，被光武破降於戲陽</td>
-</tr>
-<tr>
-<td>五樓</td>
-<td>張文</td>
-<td></td>
-</tr>
-<tr>
-<td>富平</td>
-<td>徐少</td>
-<td></td>
-</tr>
-<tr>
-<td>獲索</td>
-<td>古師郎</td>
-<td></td>
-</tr>
-<tr>
-<td>檀鄉</td>
-<td>董次仲</td>
-<td>刁子都敗後餘黨會入，吳漢破於鄴東漳水</td>
-</tr>
-</tbody>
-</table>
+</li>
+<li>東漢姓名連珠：蓋延岑彭寵
+<ul>
+<li>蓋延：光武猛將，雲台二十八將排11</li>
+<li>延岑：兩漢群雄，依附秦豐、公孫述，被吳漢斬</li>
+<li>岑彭：光武名將，降朱鮪，平南方，雲台二十八將排6</li>
+<li>彭寵：同光武平王郎，後叛漢自立勾結匈奴</li>
+</ul>
+</li>
+</ul>
+<h2 class="mume-header" id="50110-%E8%B3%88%E5%BE%A9%E5%AF%87%E6%81%82%E5%90%88%E5%8F%8A%E5%8A%89%E6%B0%B8%E6%95%97">50110 賈復寇恂合及劉永敗</h2>
+
+<blockquote>
+<p>秋，贾复南击召陵、新息-&gt;皆平之</p>
+</blockquote>
+<h2 class="mume-header" id="50111-%E8%B5%A4%E7%9C%89%E6%8E%98%E5%A2%93%E5%8F%8A%E9%A6%AE%E7%95%B0%E6%8F%9B%E9%84%A7%E7%A6%B9">50111 赤眉掘墓及馮異換鄧禹</h2>
+
+<blockquote>
+<p>赤眉引兵欲西上陇-&gt;降其将卒五千馀人</p>
+</blockquote>
+<ul>
+<li>趙充國、光武帝征伐不在略地屠城，而為安集百姓</li>
+</ul>
 
       </div>
       
