--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -300,7 +300,7 @@ section 玄漢
     劉秀:active,lx2,after lx,732d
     張卬:active,za2,after za,366d
 section 東漢
-    劉秀:done,lx3,after lx2,732d
+    劉秀:done,lx3,after lx2,1464d
     
 section 赤眉軍
     樊崇:fc,18,2196d
@@ -317,8 +317,8 @@ section __赤眉二部
     謝祿:active,xl2,after xl,366d
     楊音:active,yy2,after yy,366d
 section 劉盆子
-    樊崇:active,fc2,after fc,732d
-    徐宣:active,xx2,after xx,732d
+    樊崇:active,fc2,after fc,1098d
+    徐宣:active,xx2,after xx,1098d
     王匡:crit,wk4,after wk3,366d
     張卬:done,za3,after za2,732d
   
@@ -359,6 +359,7 @@ section 割據
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
     隗囂:wx,26,2562d
+    張步:zb,27,732d
     彭寵:pc,27,732d
 </div><h2 class="mume-header" id="%E6%96%B0%E6%9C%AB%E5%85%A9%E6%BC%A2%E6%94%BF%E6%AC%8A%E8%A1%A8">新末兩漢政權表</h2>
 
@@ -404,7 +405,7 @@ section 割據
 <td>東漢</td>
 <td>公認朝代</td>
 <td>建武</td>
-<td>洛陽</td>
+<td>雒陽</td>
 <td>25</td>
 <td>220</td>
 <td></td>
@@ -452,7 +453,7 @@ section 割據
 <td>25</td>
 <td>27</td>
 <td>赤眉軍</td>
-<td>抓鬮稱帝，敗于劉秀</td>
+<td>抓鬮稱帝，降劉秀</td>
 </tr>
 <tr>
 <td>劉永、劉紆</td>
@@ -563,6 +564,17 @@ section 割據
 <td>33</td>
 <td>馬援、班彪、鄭興、杜林</td>
 <td>玄漢官員，割據隴右稱西州上將軍</td>
+</tr>
+<tr>
+<td>張步</td>
+<td></td>
+<td>割據</td>
+<td></td>
+<td>齊地</td>
+<td>27</td>
+<td>29</td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td>彭寵</td>
