--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -347,7 +347,7 @@ section 稱帝
     王郎:wl,23,366d
     劉嬰:lying,25,1d
     劉盆子:lpz,25,732d
-    劉永:lyong,25,732d
+    劉永:lyong,25,1464d
     盧芳:lf,25,4392d
     公孫述:gss,25,4026d
     孫登:sd,26,1d
@@ -361,6 +361,7 @@ section 割據
     隗囂:wx,26,2562d
     張步:zb,27,732d
     彭寵:pc,27,732d
+    張豐:zf,27,366d
 </div><h2 class="mume-header" id="%E6%96%B0%E6%9C%AB%E5%85%A9%E6%BC%A2%E6%94%BF%E6%AC%8A%E8%A1%A8">新末兩漢政權表</h2>
 
 <table>
@@ -462,9 +463,9 @@ section 割據
 <td></td>
 <td>睢陽</td>
 <td>25</td>
-<td>27</td>
+<td>29</td>
 <td>周建、佼彊、張步、蘇茂、董憲</td>
-<td>梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破</td>
+<td>梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被吳漢敗</td>
 </tr>
 <tr>
 <td>盧芳</td>
@@ -508,7 +509,7 @@ section 割據
 <td>27</td>
 <td>30</td>
 <td></td>
-<td>新朝官員割據廬江，被劉秀敗部下殺</td>
+<td>新朝官員割據廬江九郡，被劉秀敗部下殺</td>
 </tr>
 <tr>
 <td>秦豐</td>
@@ -570,11 +571,11 @@ section 割據
 <td></td>
 <td>割據</td>
 <td></td>
-<td>齊地</td>
+<td>齊地十二郡</td>
 <td>27</td>
 <td>29</td>
 <td></td>
-<td></td>
+<td>賊帥出身，劉永拜輔漢大將軍</td>
 </tr>
 <tr>
 <td>彭寵</td>
@@ -586,6 +587,17 @@ section 割據
 <td>29</td>
 <td></td>
 <td>光武部將，被劉秀平</td>
+</tr>
+<tr>
+<td>張豐</td>
+<td></td>
+<td>割據</td>
+<td></td>
+<td>涿郡</td>
+<td>27</td>
+<td></td>
+<td></td>
+<td>光武官員，反漢自稱無上大將軍，自稱肘石有玉璽，被祭遵砸破</td>
 </tr>
 </tbody>
 </table>
