更新至卷41節8

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -319,6 +319,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>殺子：石碏、金日磾、漢成帝、王立、王莽</li>
 <li>狗屎運：王興、王盛</li>
 <li>仁義之師：趙充國、漢光武帝</li>
+<li>奇葩爵位：羹頡侯劉信、不義侯子密</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
