更新至卷41節10

--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -354,8 +354,9 @@ section 稱帝
     李憲:lxian,27,1098d
 
 section 割據
+    田戎:tr,23,2196d
     秦豐:qf,24,1830d
-    竇融:dr,25,4026d
+    竇融:dr,25,1464d
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
     隗囂:wx,26,2562d
@@ -512,6 +513,17 @@ section 割據
 <td>新朝官員割據廬江九郡，被劉秀敗部下殺</td>
 </tr>
 <tr>
+<td>田戎</td>
+<td></td>
+<td>割據</td>
+<td></td>
+<td>夷陵</td>
+<td>23</td>
+<td>29</td>
+<td></td>
+<td>群盜出身，自稱掃地大將軍，與秦豐聯合，兵敗欲降復反，敗於岑彭降公孫述</td>
+</tr>
+<tr>
 <td>秦豐</td>
 <td></td>
 <td>割據</td>
@@ -520,7 +532,7 @@ section 割據
 <td>24</td>
 <td>29</td>
 <td>嚴岑、田戎</td>
-<td>新末反莽，自稱楚黎王，被劉秀滅</td>
+<td>新末反莽，自稱楚黎王，嫁女延岑、田戎，被劉秀滅</td>
 </tr>
 <tr>
 <td>竇融</td>
@@ -529,9 +541,9 @@ section 割據
 <td></td>
 <td>河西五郡</td>
 <td>25</td>
-<td>36</td>
+<td>29</td>
 <td></td>
-<td>玄漢官員，更始敗後割據，歸降光武</td>
+<td>玄漢官員，更始敗後割據，遣使臣光武，實際36年正式歸漢</td>
 </tr>
 <tr>
 <td>劉嘉</td>
@@ -564,7 +576,7 @@ section 割據
 <td>26</td>
 <td>33</td>
 <td>馬援、班彪、鄭興、杜林</td>
-<td>玄漢官員，割據隴右稱西州上將軍</td>
+<td>玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據</td>
 </tr>
 <tr>
 <td>張步</td>
