更新至卷41節13

--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -466,7 +466,7 @@ section 割據
 <td>25</td>
 <td>29</td>
 <td>周建、佼彊、張步、蘇茂、董憲</td>
-<td>梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被吳漢敗</td>
+<td>梁王劉武後人，籠絡各割據勢力，被蓋延馬武等破。劉紆繼立，被劉秀敗，軍士斬之</td>
 </tr>
 <tr>
 <td>盧芳</td>
@@ -477,7 +477,7 @@ section 割據
 <td>25</td>
 <td>40</td>
 <td></td>
-<td>江湖騙子，西平王，呼都而尸單于擁立，被光武降，復叛逃匈奴</td>
+<td>江湖騙子，西平王，呼都而尸單于擁立為漢帝，據五郡，被光武降，復叛逃匈奴</td>
 </tr>
 <tr>
 <td>公孫述</td>
@@ -587,7 +587,7 @@ section 割據
 <td>27</td>
 <td>29</td>
 <td></td>
-<td>賊帥出身，劉永拜輔漢大將軍</td>
+<td>賊帥出身，劉永拜輔漢大將軍，割據十二郡自稱齊王，被耿弇破，殺蘇茂降漢</td>
 </tr>
 <tr>
 <td>彭寵</td>
