--- a/index.html
+++ b/index.html
@@ -729,6 +729,15 @@ pre[data-line] .line-highlight[data-end]:after {
 <td></td>
 <td>漢光武帝至2年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B441.html">卷41</a></td>
+<td>漢紀三十三</td>
+<td>27</td>
+<td>29</td>
+<td>耿氏世系、莎車王世系</td>
+<td></td>
+<td>漢光武帝3年至5年</td>
+</tr>
 </tbody>
 </table>
 
