--- a/筆記/资治通鉴38.html
+++ b/筆記/资治通鉴38.html
@@ -454,7 +454,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>初，长沙定王发生舂陵节侯买-&gt;父守及家屬坐死者六十四人</p>
 </blockquote>
 <ul>
-<li>漢家當興李氏為輔，讖語屢出。第一次卜者王況給李焉寫了十萬字讖書，誅死；第二次李守與全家說，最終李秩只能算是雲台二十八將的替補</li>
+<li>漢家當興李氏為輔，讖語屢出。第一次卜者王況給李焉寫了十萬字讖書，誅死；第二次李守與全家說，最終李佚只能算是雲台二十八將的替補</li>
 </ul>
 <h2 class="mume-header" id="40211-%E5%B0%8F%E9%95%B7%E5%AE%89%E4%B9%8B%E6%88%B0%E5%8F%8A%E7%B6%A0%E6%9E%97%E5%90%88%E5%85%B5">40211 小長安之戰及綠林合兵</h2>
 
