--- a/筆記/资治通鉴39.html
+++ b/筆記/资治通鉴39.html
@@ -451,7 +451,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>青犢</td>
 <td></td>
-<td>初被鮑永破。與赤眉別帥合，被劉秀破於射犬。餘黨立孫登為天子</td>
+<td>初被鮑永破。與赤眉別帥合，被劉秀破於射犬。餘黨立孫登為天子。吴漢等軹西破之</td>
 </tr>
 <tr>
 <td>上江</td>
@@ -460,7 +460,7 @@ pre[data-line] .line-highlight[data-end]:after {
 </tr>
 <tr>
 <td>大彤</td>
-<td>樊重</td>
+<td>樊重、重異</td>
 <td>與赤眉別帥合，被劉秀破於射犬</td>
 </tr>
 <tr>
@@ -476,7 +476,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>尤來</td>
 <td>樊崇</td>
-<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡。餘黨李孫登為天子</td>
+<td>被劉秀敗於元氏、北平，勝劉秀順水北，被陳俊敗於漁陽，被十三將追散殆盡。餘黨立孫登為天子</td>
 </tr>
 <tr>
 <td>大槍</td>
@@ -486,7 +486,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>五校</td>
 <td>高扈</td>
-<td>真定戰傷賈復，被光武破降於戲陽</td>
+<td>真定戰傷賈復，被光武破降於戲陽。吳漢等破於臨平。耿弇城陽滅餘黨</td>
 </tr>
 <tr>
 <td>五樓</td>
@@ -496,12 +496,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <tr>
 <td>富平</td>
 <td>徐少</td>
-<td></td>
+<td>吳漢等擊破於平原、勃海</td>
 </tr>
 <tr>
 <td>獲索</td>
 <td>古師郎</td>
-<td></td>
+<td>吳漢等擊破於平原、勃海</td>
 </tr>
 <tr>
 <td>檀鄉</td>
