--- a/筆記/资治通鉴40.html
+++ b/筆記/资治通鉴40.html
@@ -285,6 +285,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>起義時間雖早，但一直不知道設旗號</li>
 <li>聽說要立個皇帝，抓鬮選皇帝，自己稱臣</li>
 <li>立了皇帝也是跟風做傀儡，從來不拜也不會用</li>
+<li>飯局上也能打起來，殺一百多人才消停</li>
 <li>經濟來源靠搶，一路打砸搶，污辱呂后屍</li>
 </ul>
 </li>
@@ -320,6 +321,9 @@ pre[data-line] .line-highlight[data-end]:after {
 <blockquote>
 <p>庚辰，悉封诸功臣为列侯-&gt;事不谐矣</p>
 </blockquote>
+<ul>
+<li>關於領導的衝動：劉邦讓陳平軍中斬樊噲，陳平押送回來處置；光武讓宗廣軍中斬王梁，宗廣押送回來處置</li>
+</ul>
 <h2 class="mume-header" id="50108-%E5%BD%AD%E5%AF%B5%E5%BB%B6%E5%B2%91%E5%85%AC%E5%AD%AB%E8%BF%B0%E5%8F%8D">50108 彭寵延岑公孫述反</h2>
 
 <blockquote>
