更新至卷42節7

--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -587,7 +587,7 @@ section 割據
 <td>27</td>
 <td>29</td>
 <td></td>
-<td>賊帥出身，劉永拜輔漢大將軍，割據十二郡自稱齊王，被耿弇破，殺蘇茂降漢</td>
+<td>賊帥出身，劉永拜輔漢大將軍，割據十二郡自稱齊王，被耿弇破，殺蘇茂降漢，復反被陳俊斬</td>
 </tr>
 <tr>
 <td>彭寵</td>
