--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -268,7 +268,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>後宮達人：田成子、張蒼、中山靖王劉勝、田蚡、司馬炎</li>
 <li>烹子食子：易牙、樂羊</li>
 <li>人力大牛：翟璜、暴勝之</li>
-<li>愛兵如子：吳起、李廣、衛青</li>
+<li>愛兵如子：吳起、李廣、衛青、祭遵</li>
 <li>虐待士卒：霍去病、李廣利、張飛</li>
 <li>招貓遞狗君王：無彊、宋康王、齊湣王</li>
 <li>餓死：齊桓公、趙武靈王、齊王建、趙王劉友、周亞夫</li>
@@ -286,7 +286,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>狐臭：楚懷王</li>
 <li>壁中藏書：孔鮒、伏生、陳寵曾祖陳咸</li>
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩</li>
+<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂</li>
 <li>嘴賤：韓生、栗姬、楊修</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐</li>
 <li>長壽：趙佗、張蒼、伏生</li>
