更新至卷42節9

--- a/年代專項/新朝/新末兩漢政權圖表.html
+++ b/年代專項/新朝/新末兩漢政權圖表.html
@@ -359,7 +359,7 @@ section 割據
     竇融:dr,25,1464d
 	劉嘉:lj,25,732d
 	尹尊:yz,25,366d
-    隗囂:wx,26,2562d
+    隗囂、隗純:wx,26,2928d
     張步:zb,27,732d
     彭寵:pc,27,732d
     張豐:zf,27,366d
@@ -568,15 +568,15 @@ section 割據
 <td>玄漢官員，更始敗後割據，被賈復破降</td>
 </tr>
 <tr>
-<td>隗囂</td>
+<td>隗囂、隗純</td>
 <td></td>
 <td>割據</td>
 <td>漢復</td>
 <td>隴右</td>
 <td>26</td>
-<td>33</td>
+<td>34</td>
 <td>馬援、班彪、鄭興、杜林</td>
-<td>玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據</td>
+<td>玄漢官員，割據隴右稱西州上將軍，表面臣漢實際割據，左右搖擺，33年病餓怒死，34年其子降漢</td>
 </tr>
 <tr>
 <td>張步</td>
