--- a/index.html
+++ b/index.html
@@ -738,6 +738,15 @@ pre[data-line] .line-highlight[data-end]:after {
 <td></td>
 <td>漢光武帝3年至5年</td>
 </tr>
+<tr>
+<td><a href="%E7%AD%86%E8%A8%98/%E8%B5%84%E6%B2%BB%E9%80%9A%E9%89%B442.html">卷42</a></td>
+<td>漢紀三十四</td>
+<td>30</td>
+<td>35</td>
+<td>陰氏世系</td>
+<td></td>
+<td>漢光武帝6年至11年</td>
+</tr>
 </tbody>
 </table>
 
