更新云臺二十八將及政權年代表

--- a/筆記/资治通鉴42.html
+++ b/筆記/资治通鉴42.html
@@ -374,7 +374,8 @@ class 鄧讓妻,陰麗華,孝和陰皇后 female
 <p>帝自将征公孙述-&gt;故伋言及之</p>
 </blockquote>
 <ul>
-<li>兩漢第一刺客公孫述</li>
+<li>來歙襲斬金梁，隗囂言：何其神也；岑彭襲破侯丹，公孫述言：是何神也。</li>
+<li>兩漢第一刺客公孫述，亦何其神也</li>
 </ul>
 
       </div>
