--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -298,12 +298,12 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>名廚：伊尹、易牙</li>
 <li>狗監：楊得意</li>
 <li>弼馬溫：金日磾、李延年、蘇武、上官桀、傅介子</li>
-<li>牧羊：卜式、路溫舒</li>
+<li>牧羊：卜式、路溫舒、劉盆子</li>
 <li>屠夫出身：姜子牙、聶政、樊噲、朱亥、何進、張飛</li>
 <li>力能扛鼎：秦武王、項羽、淮南王劉長、廣陵王劉胥</li>
 <li>易與耳：劇辛、龍且、李廣</li>
 <li>刻苦讀書：朱買臣、兒寬、路溫舒、匡衡</li>
-<li>常敗將軍：李廣、李廣利、夏侯惇、黃祖、王玄謨、李景隆</li>
+<li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
 <li>漢奸：中行説、趙信、衛律</li>
 <li>媽寶：梁王劉武、昭平君</li>
 <li>射天罵天：武乙、紂、宋康王、上官安</li>
