更新至卷43節7

--- a/通用專項/雜項/奇葩序列.html
+++ b/通用專項/雜項/奇葩序列.html
@@ -286,7 +286,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>狐臭：楚懷王</li>
 <li>壁中藏書：孔鮒、伏生、陳寵曾祖陳咸</li>
 <li>相面大師：呂公、劉邦、許負、唐舉</li>
-<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂</li>
+<li>感動中國好官：魏咎、卜式、兒寬、趙廣漢、韓延壽、召信臣、嚴詡、卓茂、杜詩、寇恂、張堪</li>
 <li>嘴賤：韓生、栗姬、楊修</li>
 <li>站錯隊的智者：李左車、龍且客、伍被、燕王旦相平、嚴尤、田豐</li>
 <li>長壽：趙佗、張蒼、伏生</li>
@@ -304,7 +304,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>易與耳：劇辛、龍且、李廣</li>
 <li>刻苦讀書：朱買臣、兒寬、路溫舒、匡衡</li>
 <li>常敗將軍：李廣、李廣利、鄧禹、夏侯惇、黃祖、王玄謨、李景隆</li>
-<li>漢奸：中行説、趙信、衛律</li>
+<li>漢奸：中行説、趙信、衛律、盧芳</li>
 <li>媽寶：梁王劉武、昭平君</li>
 <li>射天罵天：武乙、紂、宋康王、上官安</li>
 <li>裸奔愛好者：桑扈、上官安、劉伶</li>
@@ -320,6 +320,8 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>狗屎運：王興、王盛</li>
 <li>仁義之師：趙充國、漢光武帝</li>
 <li>奇葩爵位：羹頡侯劉信、不義侯子密</li>
+<li>女反賊：呂母、遲昭平、徵側、徵貳</li>
+<li>巨人：阮翁仲、巨毋霸</li>
 </ul>
 <h1 class="mume-header" id="%E9%9B%9C%E8%AA%AA">雜說</h1>
 
