--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>1.3.2 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E6%94%BF%E6%AC%8A%E5%B9%B4%E4%BB%A3%E8%A1%A8/%E6%BC%A2.html">漢</a></li>
 </ul>
 </li>
+<li>1.4 <a href="%E4%B8%BB%E8%A6%81%E6%95%B8%E6%93%9A/%E4%BA%8B%E4%BB%B6%E8%A1%A8.html">事件表</a></li>
 </ul>
 <h2 class="mume-header" id="2-%E5%B9%B4%E4%BB%A3%E5%B0%88%E9%A0%85">2 年代專項</h2>
 
