--- a/4_通用專項/奇葩序列.html
+++ b/4_通用專項/奇葩序列.html
@@ -280,7 +280,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5614;&#x8840;&#x6B7B;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x3001;&#x738B;&#x5609;&#x3001;&#x796D;&#x809C;&#x3001;&#x99AC;&#x65E5;&#x78FE;&#x3001;&#x8881;&#x8853;&#x3001;&#x8881;&#x7D39;</li>
 <li>&#x75BD;&#x767C;&#x80CC;&#x6B7B;&#xFF1A;&#x8303;&#x589E;&#x3001;&#x5289;&#x7109;&#x3001;&#x66F9;&#x4F11;</li>
 <li>&#x81EA;&#x711A;&#xFF1A;&#x9B4F;&#x548E;&#x3001;&#x6D89;&#x9593;&#x3001;&#x5B5D;&#x5E73;&#x738B;&#x7687;&#x540E;</li>
-<li>&#x8D74;&#x6230;&#x9663;&#x6B89;&#x96E3;&#xFF1A;&#x95DC;&#x9756;&#x3001;&#x4E8E;&#x8A6E;</li>
+<li>&#x8D74;&#x6230;&#x9663;&#x6B89;&#x96E3;&#xFF1A;&#x95DC;&#x9756;&#x3001;&#x4E8E;&#x8A6E;&#x3001;&#x8AF8;&#x845B;&#x5C1A;</li>
 <li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
 <li>&#x667A;&#x6167;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x5433;&#x8D77;&#x5352;&#x6BCD;&#x3001;&#x9673;&#x5B30;&#x6BCD;&#x3001;&#x738B;&#x9675;&#x4E4B;&#x6BCD;&#x3001;&#x5F35;&#x6E6F;&#x4E4B;&#x6BCD;&#x3001;&#x738B;&#x5149;&#x6BCD;&#x3001;&#x8303;&#x6EC2;&#x6BCD;&#x3001;&#x8D99;&#x82DE;&#x6BCD;&#x3001;&#x674E;&#x7FA9;&#x3001;&#x738B;&#x7D93;&#x6BCD;</li>
 <li>&#x7D55;&#x671B;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x8D99;&#x5C07;&#x62EC;&#x6BCD;&#x3001;&#x6641;&#x932F;&#x7236;&#x3001;&#x9673;&#x52DD;&#x59BB;&#x7236;&#x3001;&#x8D99;&#x9577;&#x5E74;&#x3001;&#x56B4;&#x5EF6;&#x5E74;&#x6BCD;</li>
