更新至卷79節8
Former-commit-id: 5cc85635675135317ab5bb22c0fd3e3523b7c11b

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -338,7 +338,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x88DD;&#x75C5;&#x5927;&#x5E2B;&#xFF1A;&#x53F8;&#x99AC;&#x61FF;&#x3001;&#x885B;&#x74D8;</li>
 <li>&#x7368;&#x773C;&#x9F8D;&#xFF1A;&#x675C;&#x6B3D;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x4E01;&#x5100;&#x3001;&#x53F8;&#x99AC;&#x5E2B;</li>
 <li>&#x9AD8;&#x983B;&#x7387;&#x72AF;&#x7F6A;&#xFF1A;&#x5289;&#x8CC0;&#x3001;&#x5289;&#x7ACB;</li>
-<li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;</li>
+<li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;</li>
 <li>&#x6BBA;&#x5B50;&#xFF1A;&#x77F3;&#x788F;&#x3001;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x738B;&#x7ACB;&#x3001;&#x738B;&#x83BD;</li>
 <li>&#x72D7;&#x5C4E;&#x904B;&#xFF1A;&#x738B;&#x8208;&#x3001;&#x738B;&#x76DB;</li>
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
