--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -268,7 +268,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x62D2;&#x7D55;&#x7A31;&#x5E1D;&#x738B;&#xFF1A;&#x5B63;&#x672D;&#x3001;&#x516C;&#x5B50;&#x95AD;&#x3001;&#x5289;&#x865E;</li>
 <li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
-<li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;</li>
+<li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;</li>
 <li>&#x611B;&#x5175;&#x5982;&#x5B50;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;&#x3001;&#x885B;&#x9752;&#x3001;&#x796D;&#x9075;&#x3001;&#x6BB5;&#x71B2;&#x3001;&#x7687;&#x752B;&#x5D69;</li>
 <li>&#x8650;&#x5F85;&#x58EB;&#x5352;&#xFF1A;&#x970D;&#x53BB;&#x75C5;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x5F35;&#x98DB;</li>
 <li>&#x8650;&#x5F85;&#x52D5;&#x7269;&#xFF1A;&#x7530;&#x55AE;&#x3001;&#x694A;&#x7401;</li>
@@ -306,7 +306,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x4E8C;&#x5A5A;&#x7687;&#x540E;&#xFF1A;&#x8584;&#x59EC;&#x3001;&#x5B5D;&#x666F;&#x738B;&#x7687;&#x540E;&#x3001;&#x7504;&#x592B;&#x4EBA;&#x3001;&#x8700;&#x6F22;&#x5433;&#x7687;&#x540E;&#x3001;&#x7F8A;&#x737B;&#x5BB9;</li>
 <li>&#x919C;&#xFF1A;&#x695A;&#x7A46;&#x738B;&#x3001;&#x5B5F;&#x5617;&#x541B;&#x3001;&#x8521;&#x6FA4;&#x3001;&#x7530;&#x86A1;&#x3001;&#x5468;&#x8209;&#x3001;&#x5468;&#x71EE;&#x3001;&#x6881;&#x80E4;&#x3001;&#x7BA1;&#x8F05;</li>
 <li>&#x77EC;&#xFF1A;&#x5468;&#x8209;&#x3001;&#x5F35;&#x677E;&#x3001;&#x6731;&#x7136;</li>
-<li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;&#x3001;&#x5B6B;&#x79AE;</li>
+<li>&#x91CE;&#x7378;&#x640F;&#x9B25;&#x8005;&#xFF1A;&#x8F45;&#x56FA;&#x3001;&#x8CC8;&#x592B;&#x4EBA;&#x3001;&#x99AE;&#x5A55;&#x59A4;&#x3001;&#x5B6B;&#x79AE;&#x3001;&#x694A;&#x9999;</li>
 <li>&#x88AB;&#x6C61;&#x65E9;&#x5E74;&#x5931;&#x5FB7;&#xFF1A;&#x9673;&#x5E73;&#x3001;&#x76F4;&#x4E0D;&#x7591;&#x3001;&#x7B2C;&#x4E94;&#x502B;</li>
 <li>&#x540D;&#x5EDA;&#xFF1A;&#x4F0A;&#x5C39;&#x3001;&#x6613;&#x7259;</li>
 <li>&#x72D7;&#x76E3;&#xFF1A;&#x694A;&#x5F97;&#x610F;</li>
@@ -331,14 +331,14 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5973;&#x88DD;&#x5927;&#x4F6C;&#xFF1A;&#x66F9;&#x53E1;&#x3001;&#x4F55;&#x664F;</li>
 <li>&#x5A18;&#x7832;&#xFF1A;&#x674E;&#x56FA;&#x3001;&#x66F9;&#x690D;&#x3001;&#x4F55;&#x664F;&#x3001;&#x5510;&#x4F2F;&#x864E;</li>
 <li>&#x8457;&#x540D;&#x53F8;&#x6A5F;&#xFF1A;&#x9020;&#x7236;&#x3001;&#x6771;&#x91CE;&#x7562;&#x3001;&#x738B;&#x826F;&#x3001;&#x97D3;&#x54C0;&#x3001;&#x7F8A;&#x659F;&#x3001;&#x66F9;&#x53C3;&#x3001;&#x885B;&#x7DB0;</li>
-<li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;</li>
+<li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
 <li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x6731;&#x68E3;</li>
 <li>&#x88DD;&#x6B7B;&#x5927;&#x5E2B;&#xFF1A;&#x675C;&#x6839;</li>
 <li>&#x88DD;&#x75C5;&#x5927;&#x5E2B;&#xFF1A;&#x53F8;&#x99AC;&#x61FF;&#x3001;&#x885B;&#x74D8;</li>
 <li>&#x7368;&#x773C;&#x9F8D;&#xFF1A;&#x675C;&#x6B3D;&#x3001;&#x590F;&#x4FAF;&#x60C7;&#x3001;&#x4E01;&#x5100;&#x3001;&#x53F8;&#x99AC;&#x5E2B;</li>
 <li>&#x9AD8;&#x983B;&#x7387;&#x72AF;&#x7F6A;&#xFF1A;&#x5289;&#x8CC0;&#x3001;&#x5289;&#x7ACB;</li>
-<li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;</li>
+<li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;&#x3001;&#x90B5;&#x7587;</li>
 <li>&#x6BBA;&#x5B50;&#xFF1A;&#x77F3;&#x788F;&#x3001;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x738B;&#x7ACB;&#x3001;&#x738B;&#x83BD;</li>
 <li>&#x72D7;&#x5C4E;&#x904B;&#xFF1A;&#x738B;&#x8208;&#x3001;&#x738B;&#x76DB;</li>
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
