更新至卷80節7
Former-commit-id: 3dd8b504fccf5f029869ad354e31b2351ae13f37

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -283,7 +283,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x8D74;&#x6230;&#x9663;&#x6B89;&#x96E3;&#xFF1A;&#x95DC;&#x9756;&#x3001;&#x4E8E;&#x8A6E;&#x3001;&#x8AF8;&#x845B;&#x5C1A;</li>
 <li>&#x667A;&#x8B00;&#x5C0F;&#x4EBA;&#x7269;&#xFF1A;&#x8CAB;&#x73E0;&#x8005;&#x3001;&#x8D99;&#x990A;&#x5352;&#x3001;&#x5BA3;&#x66F2;&#x4EFB;&#x6C0F;&#x3001;&#x864E;&#x5708;&#x55C7;&#x592B;&#x3001;&#x5468;&#x4E18;</li>
 <li>&#x667A;&#x6167;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x5433;&#x8D77;&#x5352;&#x6BCD;&#x3001;&#x9673;&#x5B30;&#x6BCD;&#x3001;&#x738B;&#x9675;&#x4E4B;&#x6BCD;&#x3001;&#x5F35;&#x6E6F;&#x4E4B;&#x6BCD;&#x3001;&#x738B;&#x5149;&#x6BCD;&#x3001;&#x8303;&#x6EC2;&#x6BCD;&#x3001;&#x8D99;&#x82DE;&#x6BCD;&#x3001;&#x674E;&#x7FA9;&#x3001;&#x738B;&#x7D93;&#x6BCD;</li>
-<li>&#x7D55;&#x671B;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x8D99;&#x5C07;&#x62EC;&#x6BCD;&#x3001;&#x6641;&#x932F;&#x7236;&#x3001;&#x9673;&#x52DD;&#x59BB;&#x7236;&#x3001;&#x8D99;&#x9577;&#x5E74;&#x3001;&#x56B4;&#x5EF6;&#x5E74;&#x6BCD;</li>
+<li>&#x7D55;&#x671B;&#x7684;&#x7236;&#x6BCD;&#xFF1A;&#x8D99;&#x5C07;&#x62EC;&#x6BCD;&#x3001;&#x6641;&#x932F;&#x7236;&#x3001;&#x9673;&#x52DD;&#x59BB;&#x7236;&#x3001;&#x8D99;&#x9577;&#x5E74;&#x3001;&#x56B4;&#x5EF6;&#x5E74;&#x6BCD;&#x3001;&#x5F35;&#x4FF6;&#x7236;</li>
 <li>&#x5751;&#x7239;&#xFF1A;&#x5468;&#x4E9E;&#x592B;&#x5B50;&#x3001;&#x516C;&#x5B6B;&#x656C;&#x8072;&#x3001;&#x856D;&#x4F0B;&#x3001;&#x7504;&#x5C0B;</li>
 <li>&#x6551;&#x7236;&#xFF1A;&#x7DF9;&#x7E08;&#x3001;&#x99AE;&#x7DC4;</li>
 <li>&#x88AB;&#x5F8C;&#x5ABD;&#x8650;&#xFF1A;&#x7956;&#x5DF1;&#x3001;&#x859B;&#x82DE;&#x3001;&#x8523;&#x8A61;&#x3001;&#x674E;&#x66C7;&#x3001;&#x738B;&#x7965;</li>
