--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -340,7 +340,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x9AD8;&#x983B;&#x7387;&#x72AF;&#x7F6A;&#xFF1A;&#x5289;&#x8CC0;&#x3001;&#x5289;&#x7ACB;</li>
 <li>&#x80CC;&#x934B;&#x4FE0;&#xFF1A;&#x590F;&#x4FAF;&#x85E9;&#x3001;&#x9B6F;&#x5321;&#x3001;&#x6210;&#x6FDF;&#x3001;&#x99AE;&#x6590;&#x3001;&#x90B5;&#x7587;</li>
 <li>&#x6BBA;&#x5B50;&#xFF1A;&#x77F3;&#x788F;&#x3001;&#x91D1;&#x65E5;&#x78FE;&#x3001;&#x6F22;&#x6210;&#x5E1D;&#x3001;&#x738B;&#x7ACB;&#x3001;&#x738B;&#x83BD;</li>
-<li>&#x72D7;&#x5C4E;&#x904B;&#xFF1A;&#x738B;&#x8208;&#x3001;&#x738B;&#x76DB;</li>
+<li>&#x72D7;&#x5C4E;&#x904B;&#xFF1A;&#x738B;&#x8208;&#x3001;&#x738B;&#x76DB;&#x3001;&#x9EC3;&#x8007;&#x3001;&#x5433;&#x5E73;</li>
 <li>&#x4EC1;&#x7FA9;&#x4E4B;&#x5E2B;&#xFF1A;&#x8D99;&#x5145;&#x570B;&#x3001;&#x6F22;&#x5149;&#x6B66;&#x5E1D;</li>
 <li>&#x5947;&#x8469;&#x7235;&#x4F4D;&#xFF1A;&#x7FB9;&#x9821;&#x4FAF;&#x5289;&#x4FE1;&#x3001;&#x4E0D;&#x7FA9;&#x4FAF;&#x5B50;&#x5BC6;</li>
 <li>&#x5973;&#x53CD;&#x8CCA;&#xFF1A;&#x5442;&#x6BCD;&#x3001;&#x9072;&#x662D;&#x5E73;&#x3001;&#x5FB5;&#x5074;&#x3001;&#x5FB5;&#x8CB3;&#x3001;&#x9673;&#x78A9;&#x771F;</li>
