更新至卷82節7
Former-commit-id: 34ffe562921f9828c06b4dc3a68b428e2b870203

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -273,7 +273,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x8650;&#x5F85;&#x58EB;&#x5352;&#xFF1A;&#x970D;&#x53BB;&#x75C5;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x5F35;&#x98DB;</li>
 <li>&#x8650;&#x5F85;&#x52D5;&#x7269;&#xFF1A;&#x7530;&#x55AE;&#x3001;&#x694A;&#x7401;</li>
 <li>&#x62DB;&#x8C93;&#x905E;&#x72D7;&#x541B;&#x738B;&#xFF1A;&#x7121;&#x5F4A;&#x3001;&#x5B8B;&#x5EB7;&#x738B;&#x3001;&#x9F4A;&#x6E63;&#x738B;</li>
-<li>&#x9913;&#x6B7B;&#xFF1A;&#x9F4A;&#x6853;&#x516C;&#x3001;&#x8D99;&#x6B66;&#x9748;&#x738B;&#x3001;&#x9F4A;&#x738B;&#x5EFA;&#x3001;&#x8D99;&#x738B;&#x5289;&#x53CB;&#x3001;&#x5468;&#x4E9E;&#x592B;&#x3001;&#x694A;&#x55AC;&#x3001;&#x5F97;&#x4F86;</li>
+<li>&#x9913;&#x6B7B;&#xFF1A;&#x9F4A;&#x6853;&#x516C;&#x3001;&#x8D99;&#x6B66;&#x9748;&#x738B;&#x3001;&#x9F4A;&#x738B;&#x5EFA;&#x3001;&#x8D99;&#x738B;&#x5289;&#x53CB;&#x3001;&#x5468;&#x4E9E;&#x592B;&#x3001;&#x694A;&#x55AC;&#x3001;&#x5F97;&#x4F86;&#x3001;&#x694A;&#x82B7;</li>
 <li>&#x6C23;&#x6B7B;&#xFF1A;&#x7533;&#x5C60;&#x5609;&#x3001;&#x738B;&#x5546;&#x3001;&#x6881;&#x5973;&#x7469;&#x3001;&#x6731;&#x7A46;&#x3001;&#x6731;&#x5101;&#x3001;&#x9678;&#x905C;&#x3001;&#x7F8A;&#x7407;&#x3001;&#x5411;&#x96C4;</li>
 <li>&#x6B7B;&#x65BC;&#x5EC1;&#x6240;&#xFF1A;&#x6649;&#x666F;&#x516C;&#x3001;&#x97D3;&#x99A5;</li>
 <li>&#x54ED;&#x6B7B;&#x54ED;&#x778E;&#xFF1A;&#x5B50;&#x590F;&#x3001;&#x5F35;&#x653E;&#x3001;&#x5B5D;&#x7766;&#x7687;&#x540E;&#x3001;&#x8D99;&#x6229;</li>
@@ -330,6 +330,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>cosplay&#x611B;&#x597D;&#x8005;&#xFF1A;&#x6FDF;&#x6771;&#x738B;&#x5289;&#x5F6D;&#x96E2;&#x3001;&#x6F22;&#x9748;&#x5E1D;</li>
 <li>&#x5973;&#x88DD;&#x5927;&#x4F6C;&#xFF1A;&#x66F9;&#x53E1;&#x3001;&#x4F55;&#x664F;</li>
 <li>&#x5A18;&#x7832;&#xFF1A;&#x674E;&#x56FA;&#x3001;&#x66F9;&#x690D;&#x3001;&#x4F55;&#x664F;&#x3001;&#x5510;&#x4F2F;&#x864E;</li>
+<li>&#x50DE;&#x5A18;&#x59D3;&#x540D;&#xFF1A;&#x5973;&#x9632;&#x3001;&#x99AE;&#x5A66;&#x3001;&#x6230;&#x570B;&#x5F90;&#x592B;&#x4EBA;&#x3001;&#x897F;&#x6F22;&#x4E01;&#x592B;&#x4EBA;&#x3001;&#x9B6F;&#x5973;&#x751F;</li>
 <li>&#x8457;&#x540D;&#x53F8;&#x6A5F;&#xFF1A;&#x9020;&#x7236;&#x3001;&#x6771;&#x91CE;&#x7562;&#x3001;&#x738B;&#x826F;&#x3001;&#x97D3;&#x54C0;&#x3001;&#x7F8A;&#x659F;&#x3001;&#x66F9;&#x53C3;&#x3001;&#x885B;&#x7DB0;</li>
 <li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
@@ -352,7 +353,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x842C;&#x4EBA;&#x8FF7;&#xFF1A;&#x9EC3;&#x61B2;</li>
 <li>&#x6B7B;&#x5FE0;&#x8001;&#x5916;&#xFF1A;&#x547C;&#x5C24;&#x5FBD;</li>
 <li>&#x53CB;&#x65B9;&#x4E2D;&#x7684;&#x524D;&#x671D;&#x5FE0;&#x826F;&#x2236;&#x5B5D;&#x5E73;&#x738B;&#x7687;&#x540E;&#x3001;&#x53F8;&#x99AC;&#x5B5A;</li>
-<li>&#x8D77;&#x540D;&#x96A8;&#x4FBF;&#xFF1A;&#x80A5;&#x9296;&#x3001;&#x6731;&#x5000;&#x3001;&#x5289;&#x849C;&#x3001;&#x9127;&#x731B;&#x5973;&#x3001;&#x674E;&#x79E6;&#x6388;</li>
+<li>&#x8D77;&#x540D;&#x96A8;&#x4FBF;&#xFF1A;&#x80A5;&#x9296;&#x3001;&#x6731;&#x5000;&#x3001;&#x5289;&#x849C;&#x3001;&#x9127;&#x731B;&#x5973;&#x3001;&#x674E;&#x79E6;&#x6388;&#x3001;</li>
 <li>&#x4E0D;&#x5012;&#x7FC1;&#xFF1A;&#x53D4;&#x5B6B;&#x901A;&#x3001;&#x9673;&#x5E73;&#x3001;&#x80E1;&#x5EE3;&#x3001;&#x99AE;&#x9053;&#x3001;&#x66F9;&#x632F;&#x93DE;</li>
 <li>&#x4E09;&#x4EBA;&#x4E09;&#x5C0D;&#xFF1A;&#x885B;&#x9748;&#x516C;+&#x5F4C;&#x5B50;&#x7455;+&#x5357;&#x5B50;&#x3001;&#x6F22;&#x54C0;&#x5E1D;+&#x8463;&#x8CE2;+&#x8463;&#x8CE2;&#x59BB;(+&#x8463;&#x662D;&#x5100;)&#x3001;&#x6881;&#x5180;+&#x5B6B;&#x58FD;+&#x79E6;&#x5BAE;</li>
 <li>&#x5144;&#x5F1F;&#x4E09;&#x4EBA;&#x540C;&#x5E8A;&#xFF1A;&#x59DC;&#x80B1;+&#x59DC;&#x4EF2;&#x6D77;+&#x59DC;&#x5B63;&#x6C5F;&#x3001;&#x5289;&#x5099;+&#x95DC;&#x7FBD;+&#x5F35;&#x98DB;</li>
