更新至卷84節3
Former-commit-id: 2b878cbce12e0c1cef4e27e1bea7df7c506d9181

--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -336,6 +336,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x50DE;&#x5A18;&#x59D3;&#x540D;&#xFF1A;&#x5973;&#x9632;&#x3001;&#x99AE;&#x5A66;&#x3001;&#x6230;&#x570B;&#x5F90;&#x592B;&#x4EBA;&#x3001;&#x897F;&#x6F22;&#x4E01;&#x592B;&#x4EBA;&#x3001;&#x9B6F;&#x5973;&#x751F;</li>
 <li>&#x8457;&#x540D;&#x53F8;&#x6A5F;&#xFF1A;&#x9020;&#x7236;&#x3001;&#x6771;&#x91CE;&#x7562;&#x3001;&#x738B;&#x826F;&#x3001;&#x97D3;&#x54C0;&#x3001;&#x7F8A;&#x659F;&#x3001;&#x66F9;&#x53C3;&#x3001;&#x885B;&#x7DB0;</li>
 <li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;</li>
+<li>&#x98DF;&#x4EBA;&#x9B54;&#xFF1A;&#x7A0B;&#x6631;&#x3001;&#x5F35;&#x65B9;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
 <li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x6731;&#x68E3;</li>
 <li>&#x88DD;&#x6B7B;&#x5927;&#x5E2B;&#xFF1A;&#x675C;&#x6839;</li>
@@ -381,6 +382,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5289;&#x5805;&#x5F97;&#xFF1A;&#x8207;&#x60C5;&#x592B;&#x6DEB;&#x4E82;&#x4F7F;&#x592B;&#x73ED;&#x59CB;&#x4F0F;&#x5E8A;&#x4E0B;&#xFF0C;&#x88AB;&#x6BBA;</li>
 <li>&#x6B12;&#x5DF4;&#xFF1A;&#x51C8;&#x8EAB;&#x4E0D;&#x5FB9;&#x5E95;&#x7684;&#x5BA6;&#x5B98;&#xFF0C;&#x5A36;&#x59BB;&#x751F;&#x5B50;&#xFF0C;&#x540D;&#x5217;&#x516B;&#x4F7F;</li>
 <li>&#x4E09;&#x59D3;&#x7687;&#x540E;&#xFF1A;&#x9127;&#x731B;&#x5973;</li>
+<li>&#x6E1B;&#x80A5;&#x56F0;&#x96E3;&#xFF1A;&#x738B;&#x620E;&#x5B50;&#x738B;&#x7D8F;<code>&#x6709;&#x7F8E;&#x53F7;&#x800C;&#x592A;&#x80A5;&#xFF0C;&#x620E;&#x4EE4;&#x98DF;&#x7CE0;&#xFF0C;&#x800C;&#x80A5;&#x6108;&#x751A;&#x4E5F;&#x3002;</code></li>
 <li>&#x5B5D;&#x611F;&#x52D5;&#x5929;&#x8207;&#x7956;&#x5DF1;&#x6D41;&#x653E;&#xFF1B;&#x57CB;&#x5152;&#x5949;&#x6BCD;&#x8207;&#x6962;&#x5C71;&#x7BC0;&#x8003;&#xFF1B;&#x81E5;&#x51B0;&#x6C42;&#x9BC9;&#x8207;&#x8340;&#x4EE4;&#x50B7;&#x795E;&#xFF1B;&#x54ED;&#x7AF9;&#x751F;&#x7B4D;&#x8207;&#x5B50;&#x590F;&#x5931;&#x660E;&#xFF1B;&#x627C;&#x864E;&#x6551;&#x7236;&#x8207;&#x674E;&#x9035;&#x80CC;&#x6BCD;&#xFF1B;&#x4E73;&#x59D1;&#x4E0D;&#x6020;&#x8207;&#x5F35;&#x84BC;&#x559D;&#x5976;</li>
 </ul>
 
