--- a/3_專項研究/3.2_通用/奇葩序列.html
+++ b/3_專項研究/3.2_通用/奇葩序列.html
@@ -269,6 +269,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x5F8C;&#x5BAE;&#x9054;&#x4EBA;&#xFF1A;&#x7530;&#x6210;&#x5B50;&#x3001;&#x5F35;&#x84BC;&#x3001;&#x4E2D;&#x5C71;&#x9756;&#x738B;&#x5289;&#x52DD;&#x3001;&#x7530;&#x86A1;&#x3001;&#x66F9;&#x53E1;&#x3001;&#x53F8;&#x99AC;&#x708E;</li>
 <li>&#x70F9;&#x5B50;&#x98DF;&#x5B50;&#xFF1A;&#x6613;&#x7259;&#x3001;&#x6A02;&#x7F8A;</li>
 <li>&#x4EBA;&#x529B;&#x5927;&#x725B;&#xFF1A;&#x7FDF;&#x749C;&#x3001;&#x66B4;&#x52DD;&#x4E4B;&#x3001;&#x9127;&#x9A2D;&#x3001;&#x9673;&#x5FE0;&#x3001;&#x738B;&#x9F94;&#x3001;&#x66F9;&#x9A30;&#x3001;&#x8340;&#x5F67;&#x3001;&#x53F8;&#x99AC;&#x5FBD;&#x3001;&#x5C71;&#x6FE4;</li>
+<li>&#x53AD;&#x52DD;&#x5236;&#x6575;&#xFF1A;&#x738B;&#x83BD;&#x3001;&#x53F8;&#x99AC;&#x502B;</li>
 <li>&#x611B;&#x5175;&#x5982;&#x5B50;&#xFF1A;&#x5433;&#x8D77;&#x3001;&#x674E;&#x5EE3;&#x3001;&#x885B;&#x9752;&#x3001;&#x796D;&#x9075;&#x3001;&#x6BB5;&#x71B2;&#x3001;&#x7687;&#x752B;&#x5D69;</li>
 <li>&#x8650;&#x5F85;&#x58EB;&#x5352;&#xFF1A;&#x970D;&#x53BB;&#x75C5;&#x3001;&#x674E;&#x5EE3;&#x5229;&#x3001;&#x5F35;&#x98DB;</li>
 <li>&#x8650;&#x5F85;&#x52D5;&#x7269;&#xFF1A;&#x7530;&#x55AE;&#x3001;&#x694A;&#x7401;</li>
@@ -336,6 +337,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <li>&#x50DE;&#x5A18;&#x59D3;&#x540D;&#xFF1A;&#x5973;&#x9632;&#x3001;&#x99AE;&#x5A66;&#x3001;&#x6230;&#x570B;&#x5F90;&#x592B;&#x4EBA;&#x3001;&#x897F;&#x6F22;&#x4E01;&#x592B;&#x4EBA;&#x3001;&#x9B6F;&#x5973;&#x751F;</li>
 <li>&#x8457;&#x540D;&#x53F8;&#x6A5F;&#xFF1A;&#x9020;&#x7236;&#x3001;&#x6771;&#x91CE;&#x7562;&#x3001;&#x738B;&#x826F;&#x3001;&#x97D3;&#x54C0;&#x3001;&#x7F8A;&#x659F;&#x3001;&#x66F9;&#x53C3;&#x3001;&#x885B;&#x7DB0;</li>
 <li>&#x8B8A;&#x614B;&#x6BBA;&#x4EBA;&#x72C2;&#xFF1A;&#x5289;&#x5EFA;&#x3001;&#x5289;&#x53BB;&#x3001;&#x8463;&#x5353;&#x3001;&#x5B6B;&#x7693;</li>
+<li>&#x5C60;&#x4F2F;&#xFF1A;&#x56B4;&#x5EF6;&#x5E74;&#x3001;&#x82DF;&#x665E;</li>
 <li>&#x98DF;&#x4EBA;&#x9B54;&#xFF1A;&#x7A0B;&#x6631;&#x3001;&#x5F35;&#x65B9;</li>
 <li>&#x76DC;&#x5893;&#x9054;&#x4EBA;&#xFF1A;&#x5289;&#x53BB;&#x3001;&#x66F9;&#x64CD;&#x3001;&#x5442;&#x5E03;&#x3001;&#x6EAB;&#x97DC;&#x3001;&#x5289;&#x8C6B;&#x3001;&#x694A;&#x7489;&#x771F;&#x8FE6;&#x3001;&#x9673;&#x5949;&#x3001;&#x4E7E;&#x9686;&#x3001;&#x5B6B;&#x6BBF;&#x82F1;</li>
 <li>&#x88DD;&#x760B;&#x5927;&#x5E2B;&#xFF1A;&#x7B95;&#x5B50;&#x3001;&#x5B6B;&#x81CF;&#x3001;&#x84AF;&#x5FB9;&#x3001;&#x97CB;&#x7384;&#x6210;&#x3001;&#x6731;&#x68E3;</li>
