漢魏世系圖表整理優化
Former-commit-id: 8b63f7af1a21ce88a51d83e860d49ec54754f4e2

--- a/index.html
+++ b/index.html
@@ -266,8 +266,6 @@ pre[data-line] .line-highlight[data-end]:after {
 <details>
 <summary>TODO</summary>
 &#x7B46;&#x8A18;&#x5167;&#x5716;&#x8868;&#x6458;&#x51FA;
-&#x6771;&#x6F22;&#x4E16;&#x7CFB;&#x8868;
-&#x66F9;&#x9B4F;&#x3001;&#x8700;&#x6F22;&#x3001;&#x5B6B;&#x5433;&#x4E16;&#x7CFB;&#x8868;
 &#x6649;&#x570B;&#x516D;&#x537F;&#x5F85;&#x6574;&#x7406;
 </details>
 <h2 class="mume-header" id="1-%E6%95%B8%E6%93%9A%E8%A1%A8">1 &#x6578;&#x64DA;&#x8868;</h2>
@@ -1209,6 +1207,20 @@ pre[data-line] .line-highlight[data-end]:after {
 </table>
 </details>
 <hr>
+<blockquote>
+<p>&#x5236;&#x4F5C;&#xFF1A;<a href="https://gamefang.github.io/">gamefang</a></p>
+</blockquote>
+<ul>
+<li>&#x5168;&#x90E8;&#x5167;&#x5BB9;&#x70BA;&#x500B;&#x4EBA;&#x8B80;&#x66F8;&#x7B46;&#x8A18;&#x53CA;&#x6574;&#x7406;&#x7814;&#x7A76;&#xFF0C;&#x4E0D;&#x8003;&#x616E;&#x6E96;&#x78BA;&#x6027;&#x8207;&#x5168;&#x9762;&#x6027;</li>
+<li>&#x9CF4;&#x8B1D;
+<ul>
+<li><a href="https://github.com/">github</a>&#xFF1A;&#x4EE3;&#x78BC;&#x6258;&#x7BA1;&#x7DB2;&#x7AD9;&#xFF0C;&#x611F;&#x8B1D;&#x5176;&#x652F;&#x6301;&#x5B58;&#x5132;&#x53CA;&#x5C55;&#x793A;&#x975C;&#x614B;&#x9801;&#x9762;</li>
+<li><a href="https://mermaid-js.github.io/mermaid/#/">mermaid</a>&#xFF1A;&#x53EF;&#x5D4C;&#x5165;markdown&#x7684;&#x5716;&#x8868;&#x5FEB;&#x901F;&#x88FD;&#x4F5C;&#x5DE5;&#x5177;</li>
+<li><a href="https://shd101wyy.github.io/markdown-preview-enhanced/#/">markdown preview enhanced</a>&#xFF1A;markdown&#x63D2;&#x4EF6;&#xFF0C;&#x5373;&#x6642;&#x9810;&#x89BD;&#x53CA;&#x8F49;html</li>
+<li><a href="https://pypi.org/project/csvtotable/">csvtotable</a>&#xFF1A;Python&#x64F4;&#x5C55;&#x5305;&#xFF0C;csv&#x8F49;html&#xFF0C;&#x652F;&#x6301;&#x5206;&#x9801;&#x3001;&#x641C;&#x7D22;&#x3001;&#x6392;&#x5E8F;&#x7B49;&#x529F;&#x80FD;</li>
+</ul>
+</li>
+</ul>
 
       </div>
       
